sync devel with github master
From: Tengfei Yin <yintengfei@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/sevenbridges@117171 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -85,6 +85,7 @@ export(asJSON)
 export(asList)
 export(asYAML)
 export(aws)
+export(batch)
 export(case_id)
 export(case_uuid)
 export(convertApp)
@@ -131,6 +132,8 @@ export(sample_id)
 export(sample_type)
 export(sample_uuid)
 export(setTaskHook)
+export(set_test_env)
+export(test_tool)
 export(updateAuthList)
 export(upload_complete_all)
 export(upload_complete_part)
