--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,36 @@
 language: r
-sudo: required
+sudo: false
+cache: packages
+
+r: 
+  - bioc-devel
+  - bioc-release
+
+os:
+  - linux
+  
+r_packages:
+  - covr
+
 bioc_required: true
+
+bioc_packages:
+  - BiocStyle
+  - BiocCheck
+
+  
+after_script:
+  - ls -lah
+  - FILE=$(ls -1t *.tar.gz | head -n 1)
+  - Rscript -e "library(BiocCheck); BiocCheck(\"${FILE}\")"
+  
+after_success:
+  - Rscript -e 'library(covr);package_coverage()'
+  - Rscript -e 'library(covr);codecov()'
+
+notifications:
+  email:
+    on_failure: yintengfei@gmail.com
+
+
+  
