--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: sevenbridges
 Type: Package
 Title: R Client for Seven Bridges Platform API and CWL Tool builder in R
-Version: 1.2.0
+Version: 1.3.1
 Date: 2015-05-01
-Author: Nan Xiao <road2stat@gmail.com>, Tengfei Yin <tengfei.yin@sbgenomics.com>
+Author:  Tengfei Yin <tengfei.yin@sbgenomics.com>, Dusan Randjelovic <dusan.randjelovic@sbgenomics.com>, Nan Xiao <road2stat@gmail.com>
 Maintainer: Tengfei Yin <tengfei.yin@sbgenomics.com>
 Description: R client and utilities for Seven Bridges platform API, from cancer
     genomics cloud to other Seven Bridges supported platforms.
 License: MIT + file LICENSE
 VignetteBuilder: knitr
-URL: https://www.sbgenomics.com
-BugReports: https://github.com/tengfei/sevenbridges/issues
+URL: https://www.sevenbridges.com
+BugReports: https://github.com/sbg/sevenbridges-r/issues
 biocViews: Software, DataImport, ThirdPartyClient
 Depends:
     methods,
@@ -32,7 +32,8 @@ Suggests:
     BiocStyle,
     knitr,
     rmarkdown,
-    testthat
+    testthat,
+    readr
 NeedsCompilation: no
 RoxygenNote: 5.0.1
 Collate:
@@ -55,5 +56,6 @@ Collate:
     Tool-class.R
     Flow-class.R
     Task-class.R
+    handler.R
     addins.R
     zzz.R
