--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,8 @@ export(File)
 export(FileDef)
 export(FileDefList)
 export(FileList)
+export(Files)
+export(FilesList)
 export(Flow)
 export(IPList)
 export(InPar)
@@ -88,7 +90,7 @@ export(aws)
 export(batch)
 export(case_id)
 export(case_uuid)
-export(convertApp)
+export(convert_app)
 export(cpu)
 export(data_format)
 export(data_subtype)
@@ -108,9 +110,14 @@ export(gdc_file_uuid)
 export(gender)
 export(getTaskHook)
 export(getToken)
+export(get_cwl_class)
 export(input)
 export(investigation)
+export(is_commandlinetool)
+export(is_workflow)
 export(library_id)
+export(link)
+export(link_what)
 export(mem)
 export(misc_get_token)
 export(misc_get_uploader)
@@ -133,7 +140,9 @@ export(sample_type)
 export(sample_uuid)
 export(setTaskHook)
 export(set_test_env)
-export(test_tool)
+export(test_tool_bunny)
+export(test_tool_cwlrun)
+export(test_tool_rabix)
 export(updateAuthList)
 export(upload_complete_all)
 export(upload_complete_part)
@@ -170,6 +179,8 @@ exportClasses(File)
 exportClasses(FileDef)
 exportClasses(FileDefList)
 exportClasses(FileList)
+exportClasses(Files)
+exportClasses(FilesList)
 exportClasses(InputParameter)
 exportClasses(InputParameterList)
 exportClasses(InputSchema)
@@ -205,6 +216,7 @@ exportClasses(characterORCommandLineBindingList)
 exportClasses(enum)
 exportMethods("%>>%")
 exportMethods("+")
+exportMethods(link)
 import(httr)
 import(methods)
 importClassesFrom(S4Vectors,List)
@@ -216,6 +228,7 @@ importFrom(S4Vectors,elementType)
 importFrom(S4Vectors,endoapply)
 importFrom(curl,curl_escape)
 importFrom(docopt,docopt)
+importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,prettify)
 importFrom(jsonlite,toJSON)
 importFrom(jsonlite,unbox)
