--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: sevenbridges
 Type: Package
-Title: R Client for Seven Bridges Platform API and CWL Tool builder in R
-Version: 1.5.1
-Date: 2015-05-01
-Author:  Tengfei Yin <tengfei.yin@sbgenomics.com>, Dusan Randjelovic <dusan.randjelovic@sbgenomics.com>, Nan Xiao <road2stat@gmail.com>
-Maintainer: Tengfei Yin <tengfei.yin@sbgenomics.com>
-Description: R client and utilities for Seven Bridges platform API, from cancer
-    genomics cloud to other Seven Bridges supported platforms.
-License: Apache License 2.0
+Title: R Client for Seven Bridges Platform API and CWL Tool Builder in R
+Version: 1.5.3
+Date: 2016-11-10
+Authors@R: c(
+    person("Nan", "Xiao", email = "nan.xiao@sbgenomics.com", role = c("aut", "cre")),
+    person("Dusan", "Randjelovic", email = "dusan.randjelovic@sbgenomics.com", role = "aut"),
+    person("Emile", "Young", email = "emile.young@sbgenomics.com", role = c("ctb")),
+    person("Tengfei", "Yin", email = "tengfei.yin@sbgenomics.com", role = c("aut")),
+    person("Seven Bridges Genomics", role = c("cph", "fnd"))
+    )
+Maintainer: Nan Xiao <nan.xiao@sbgenomics.com>
+Description: R client and utilities for Seven Bridges platform API, from Cancer
+    Genomics Cloud to other Seven Bridges supported platforms.
+License: Apache License 2.0 | file LICENSE
 VignetteBuilder: knitr
-URL: https://www.sevenbridges.com
+URL: http://www.sevenbridges.com, https://sbg.github.io/sevenbridges-r/
 BugReports: https://github.com/sbg/sevenbridges-r/issues
 biocViews: Software, DataImport, ThirdPartyClient
 Depends:
@@ -26,11 +32,12 @@ Imports:
     docopt,
     curl,
     liftr,
-    rstudioapi,
     uuid,
-    dplyr
+    dplyr,
+    shiny (>= 0.13),
+    miniUI (>= 0.1.1),
+    rstudioapi (>= 0.5)
 Suggests:
-    BiocStyle,
     knitr,
     rmarkdown,
     testthat,
