--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: sevenbridges
 Type: Package
 Title: Seven Bridges Platform API Client and Common Workflow Language Tool Builder in R
-Version: 1.5.6
+Version: 1.5.7
 Date: 2017-01-17
 Authors@R: c(
     person("Nan", "Xiao", email = "nan.xiao@sbgenomics.com", role = c("aut", "cre")),
@@ -28,7 +28,7 @@ Imports:
     yaml,
     objectProperties,
     stringr,
-    S4Vectors,
+    S4Vectors (>= 0.13.13),
     docopt,
     curl,
     liftr,
