--- a/NAMESPACE
+++ b/NAMESPACE
@@ -229,7 +229,7 @@ import(httr)
 import(methods)
 importClassesFrom(S4Vectors,List)
 importClassesFrom(S4Vectors,SimpleList)
-importClassesFrom(S4Vectors,characterORNULL)
+importClassesFrom(S4Vectors,character_OR_NULL)
 importClassesFrom(objectProperties,Enum)
 importClassesFrom(objectProperties,SingleEnum)
 importFrom(S4Vectors,elementType)
