--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,7 @@ Package: sevenbridges
 Type: Package
 Title: Seven Bridges Platform API Client and Common Workflow Language Tool
     Builder in R
-Version: 1.7.0
-Date: 2017-02-25
+Version: 1.7.1
 Authors@R: c(
     person("Nan", "Xiao", email = "nan.xiao@sevenbridges.com", role = c("aut", "cre")),
     person("Dusan", "Randjelovic", email = "dusan.randjelovic@sevenbridges.com", role = "aut"),
@@ -46,7 +45,8 @@ Suggests:
     readr,
     clipr
 NeedsCompilation: no
-RoxygenNote: 5.0.1
+Encoding: UTF-8
+RoxygenNote: 6.0.1.9000
 Collate:
     sevenbridges-package.R
     class-all.R
