--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,5 @@
-pandoc: 2.10.1
-pkgdown: 1.6.1
+pandoc: '2.18'
+pkgdown: 2.0.5
 pkgdown_sha: ~
 articles:
   api: api.html
@@ -8,5 +8,5 @@ articles:
   cgc-datasets: cgc-datasets.html
   docker: docker.html
   rstudio: rstudio.html
-last_built: 2020-10-15T03:36Z
+last_built: 2023-04-05T21:59Z
 
